Fix Spacing Issues in About Section

--- a/style.css
+++ b/style.css
@@ -293,7 +293,8 @@ section{
 
 #about{
     margin-bottom: 20px;
-    padding: 20px 0px;
+    padding: 15px 0px;
+    padding-bottom: 25px;
     min-height: calc(100vh - 40px);
 }
 #about-content{
